--- a/resources/dukeTheme.css
+++ b/resources/dukeTheme.css
@@ -149,3 +149,39 @@
 .scroll-pane {
   -fx-background-color: red;
 }
+
+.playerHistory {
+  -fx-border-color: #7dbbf6;
+  -fx-border-width: 10px;
+  -fx-border-radius: 5px;
+  -fx-background-radius: 10px;
+  -fx-background-color: #1b92db;
+}
+
+.list-cell:filled:selected:focused, .list-cell:filled:selected {
+  -fx-background-color: linear-gradient(from 0% 25% to 75% 100%, #0518b7, #4c7bf3);
+  -fx-text-fill: white;
+}
+
+.list-cell:even {
+  -fx-background-color: #416dd9;
+  -fx-font-family: "Trebuchet MS";
+  -fx-font-size: 12pt;
+  -fx-font-weight: bold;
+}
+
+.list-cell:odd {
+  -fx-background-color: #1a49a5;
+  -fx-font-family: "Trebuchet MS";
+  -fx-font-size: 12pt;
+  -fx-font-weight: bold;
+}
+
+.list-cell:filled:hover {
+  -fx-background-color: #0b7aea;
+  -fx-text-fill: #ffffff;
+}
+
+.list-cell {
+  -fx-alignment: center;
+}
