--- a/resources/dukeTheme.css
+++ b/resources/dukeTheme.css
@@ -1,5 +1,5 @@
 .root {
-  -fx-background: linear-gradient(from 0% 0% to 100% 100%, #1e90ff, #191970);
+  -fx-background: linear-gradient(from 0% 0% to 100% 100%, #2d2da0, #193670);
   -fx-alignment: center;
   -fx-padding: 10;
   -fx-box-border: #000000;
@@ -7,24 +7,24 @@
 }
 
 .myDialog{
-  -fx-background-color: lightblue;
+  -fx-background-color: #9ba1a4;
 }
 .myDialog > *.button-bar > *.container{
-  -fx-background-color: darkblue;
+  -fx-background-color: #24245d;
 }
 .myDialog > *.label.content{
   -fx-font-size: 14px;
   -fx-font-weight: bold;
 }
 .myDialog:header *.header-panel{
-  -fx-background-color: skyblue;
+  -fx-background-color: #476675;
 }
 .myDialog:header *.header-panel *.label {
   -fx-font-size: 18px;
 }
 
 .button {
-  -fx-background-color: linear-gradient(from 0% 0% to 50% 100%, #add8e6, #00008b);
+  -fx-background-color: linear-gradient(from 0% 0% to 50% 100%, #447786, #00008b);
   -fx-background-radius: 10;
   -fx-background-insets: 0, 1, 2, 3, 0;
   -fx-text-fill: #ffffff;
@@ -51,7 +51,7 @@
 .title {
   -fx-font-family: "Times New Roman";
   -fx-font-size: 80px;
-  -fx-text-fill: blue;
+  -fx-text-fill: #313196;
 }
 
 .titleBox {
@@ -59,7 +59,7 @@
 }
 
 .dialog-pane{
-  -fx-border-color:black;
+  -fx-border-color: #000000;
   -fx-border-width:2.0px;
 }
 
@@ -70,20 +70,20 @@
 
 .dialog-pane > .content.label {
   -fx-padding: 0.5em 0.5em 0.5em 0.5em;
-  -fx-background-color: lightblue;
+  -fx-background-color: #485f66;
   -fx-text-fill:black;
   -fx-font-size:15.0px;
 }
 
 /**Costumization of DialogPane Header**/
 .dialog-pane:header .header-panel {
-  -fx-background-color: black;
+  -fx-background-color: #000000;
 }
 
 .dialog-pane:header .header-panel .label{
-  -fx-background-color: darkblue;
+  -fx-background-color: #1b1b5d;
   -fx-background-radius:10px;
-  -fx-text-fill: skyblue;
+  -fx-text-fill: #87ceeb;
   -fx-font-size:15.0px;
 }
 
